style.css
/* ------------------- */
/* Custom properties   */
/* ------------------- */

:root {
  --clr-black: 0 0 8%;
  --clr-dark-grey: 0 0 14%;
  --clr-green: 153 71 59%;
  --clr-grey: 0 0 85%;
  --clr-white: 0 0 100%;
  --clr-red: 7 100 68%;

  --fs-100: 1.125rem;
  --fs-200: 1.5rem;
  --fs-300: 2rem;
  --fs-400: 3rem;
  --fs-700: 4.5rem;
  --fs-800: 5.5rem;

  ---fw-500: 500;
  --fw-700: 700; 
}

/* ------------------- */
/* Reset               */
/* ------------------- */

/* https://piccalil.li/blog/a-modern-css-reset */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
  padding: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* ------------------- */
/* Import font         */
/* ------------------- */

@font-face {
  font-family: "Space Grotesk";
  src: url("../assets/fonts/SpaceGrotesk-VariableFont_wght.ttf");
  font-weight: 500 700;
}

@supports not (font-variation-settings: normal) {
  @font-face {
    font-family: "Space Grotesk";
    src: url("../assets/fonts/static/SpaceGrotesk-Medium.ttf");
    font-weight: 500;
  }

  @font-face {
    font-family: "Space Grotesk";
    src: url("../assets/fonts/static/SpaceGrotesk-Bold.ttf");
    font-weight: 700;
  }
}

/* ------------------- */
/* Utility             */
/* ------------------- */

/* general */
body {
  background-color: hsl(var(--clr-black));
  font-family: 'Space Grotesk', sans-serif;
}

.flex {
  display: flex;
  gap: var(--gap, 1rem);
}

.grid {
  display: grid;
  gap: var(--gap, 1rem);
}

.sr-only {
  display: none;
  position: absolute; 
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px; 
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}

/* colors */ 
.bg-black { background-color: hsl(var(--clr-black));}
.bg-dark-grey {background-color: hsl(var(--clr-dark-grey));}
.bg-green { background-color: hsl(var(--clr-green));}
.bg-grey { background-color: hsl(var(--clr-grey));}
.bg-white { background-color: hsl(var(--clr-white));}
.bg-red { background-color: hsl(var(--clr-red));}

/* typhography */
.text-black { color: hsl(var(--clr-black));}
.text-dark-grey {color: hsl(var(--clr-dark-grey));}
.text-green { color: hsl(var(--clr-green));}
.text-grey { color: hsl(var(--clr-grey));}
.text-white { color: hsl(var(--clr-white));}
.text-red { color: hsl(var(--clr-red));}

.fw-500 { font-weight: 500;}
.fw-700 { font-weight: 700;}

.fs-normal { font-size: 1rem;}
.fs-100 { font-size: var(--fs-100);}
.fs-200 { font-size: var(--fs-200);}
.fs-300 { font-size: var(--fs-300);}
.fs-400 { font-size: var(--fs-400);}
.fs-700 { font-size: var(--fs-700);}
.fs-800 { font-size: var(--fs-800);}

@media(min-width: 40rem) {
  .fs-normal {
    font-size: var(--fs-100);
  }

  .fs-300 {
    font-size: var(--fs-400);
  }
}

/* ------------------- */
/* Components          */
/* ------------------- */

h1 {
  font-size: clamp(2.5rem, 4.507vw + 1.444rem, var(--fs-800));
}

.icon {
  fill: hsl(var(--clr-white));
}

.nav a:hover .icon {
  cursor: pointer;
  fill: hsl(var(--clr-green));
}

.underline, .btn {
  color: hsl(var(--clr-white));
  font-weight: 700;
  text-transform: uppercase;
  text-decoration: underline;
  text-decoration-color: hsl(var(--clr-green));
  text-decoration-thickness: 2px;
  text-underline-offset: 1rem;
}

.logo:hover, .btn:hover {
  cursor: pointer;
  color: hsl(var(--clr-green));
}

.logo {
  text-decoration: none;
  font-size: var(--fs-200);
}

section {
  padding-bottom: 5rem;
}

section:first-child {
  border-bottom: 2px solid hsl(var(--clr-white));
}

@media (max-width: 40rem) {
  section:nth-child(2) {
    border-bottom: 2px solid hsl(var(--clr-white));
  }

  section:last-child {
    padding-top: 2.5rem;
  }
}

/* ------------------- */
/* Layout              */
/* ------------------- */

/* general */

header, main, footer {
  padding-inline: 1rem;
}

@media (min-width: 55rem) {
  header, main, footer {
    padding-inline: 8rem;
  }
}

main {
  max-width: 100%;
}

/* navigation */

.primary-header, .footer-nav {
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.primary-header {
  margin-top: 2rem;
}

.nav {
  list-style: none;
  padding-inline-start: 0;
  align-items: center;
}

@media (min-width: 40rem) {
  .primary-header, .footer-nav {
    flex-direction: row;
    justify-content: space-between;
  }
}

/* introduction */
.intro {
  --gap: 1.25rem;
  text-align: center;
}

.avatar {
  margin-bottom: 1.25rem;
}

.underline {
  text-transform: capitalize;
  text-decoration-thickness: 5px;
  text-underline-offset: 1.1rem;
}

.avatar {
  justify-self: center;
}

@media (min-width: 40rem) {
  .intro {
    text-align: left;
    grid-template-columns: 2fr 1fr;
  }

  .avatar {
    grid-column: 2/-1;
    grid-row: 1/4;
    object-fit: contain;
  }

  .intro > *:not(:first-child) {
    grid-column: 1/2;
  }

  .intro h1 {
    grid-row: 1/2;
  }
}

/* skill set */

.skill-sets {
  --gap: 1.4375rem;
  text-align: center;
  list-style-type: none;
  padding-inline-start: 0;
}

.skill span {
  display: block;
}

@media (min-width: 40rem) {

  .skill-sets {
    text-align: left;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

/* projects */

.project-header {
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1.5rem;
}

.item:not(:last-child) {
  margin-bottom: 2.5rem;
}

.item h2 {
  text-transform: uppercase;
}

.view {
  --gap: 1.875rem;
}

@media (min-width: 40rem) {
  .project-header {
    margin-bottom: 3.75rem;
  }

  .showcase {
    --gap: 1.5rem;
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .item {
    grid-template-rows: subgrid;
    grid-row: span 4;
  }
}

@media (min-width: 55rem) {
  .demo {
    grid-column: 1/2;
    grid-row: 1/2;
    position: relative;
    z-index: 2;
  }

  .demo::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    inset: 0;
    background-color: hsl(var(--clr-black));
    opacity: 0;
  }

  .view {
    --gap: 3rem;
    grid-column: 1/2;
    grid-row: 1/2;
    justify-self: center;
    align-self: center;
    flex-direction: column;
    text-align: center;
    z-index: 1;
  }

  .item:hover {
    cursor: pointer;
  }

  .item:hover .demo::after {
    opacity: .5;
  }

  .item:hover .view {
    z-index: 3;
  }
}

/* footer - contact */

.form-wrapper {
  text-align: center;
  margin-bottom: 98px;
}

.content {
  padding-block-start: 3.625rem;
}

.content h1 {
  padding-block-end: 1.25rem;
}

.contact-form {
  --gap: 2rem;
  flex-direction: column;
}

.form-item-wrapper {
  justify-content: baseline;
}

.form-item {
  color: hsl(var(--clr-white));
  width: 100%;
  padding: 1.5rem;
  outline: transparent;
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid hsl(var(--clr-white)); 
}

.form-item:focus {
  border-bottom-color: hsl(var(--clr-green)) ;
}

.submit-btn {
  background-color: transparent;
  border: 0;
  align-self: flex-end;
}

@media (min-width: 48rem) {
  .form-wrapper {
    padding-inline: 160px;
  }
}

@media (min-width: 55rem) {
  .form-wrapper {
    --gap: 100px;
    text-align: left;
    padding-inline: 0;
    padding-block-start: 5.25rem;
    grid-template-columns: repeat(2, 1fr);
  }

  .contact-form {
    grid-column: 2/-1;
    grid-row: 1/3;
  }
}

/* form validation */
.form-item-wrapper {
  position: relative;
}

.error-icon {
  border-radius: 50%;
  border: 1px solid hsl(var(--clr-red));
  position: absolute;
  top: 1.5rem;
  right: 0;
  display: none;
}

.error-text {
  font-size: .75rem;
  text-align: right;
  margin-top: .625rem;
  display: none;
}

.form-item-wrapper[data-error="true"] .error-icon, 
.form-item-wrapper[data-error="true"] .error-text {
  display: block;
}

.form-item-wrapper[data-error="true"] .form-item {
  border-bottom-color: hsl(var(--clr-red));
}

